CHANGE: Start using SVG font and renderer; get the names from the font
This new approach seems to be working just as fine, but with the hope of rendering being more crisp.
What's left is some adaptation to QML.

--- a/resources/QtMaterialIcons.qrc
+++ b/resources/QtMaterialIcons.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>materialdesignicons-webfont.ttf</file>
+        <file>materialdesignicons-webfont.svg</file>
     </qresource>
 </RCC>
