ADD: QML support using TTF font and Glyph names (no ligatures)
Since Ligatures are not supported, mapping is done using Unicode characters extracted from the SVG.

--- a/resources/QtMaterialIcons.qrc
+++ b/resources/QtMaterialIcons.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>materialdesignicons-webfont.svg</file>
+        <file>materialdesignicons-webfont.ttf</file>
     </qresource>
 </RCC>
